# thriftify

./: .gitignore  README.md  convert.sh  makefile  mutate.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml  test-pypi-publish.yml
src/thriftify/: thriftify.py
tests/: Config.thrift  convert.sh  test_config.py
tests/Excel/: Achievements.xlsx  AssetLists.xlsx  Attacks.xlsx  Campaigns!.xlsx  Campaigns.xlsx  ChatMessages.xlsx  Chests.xlsx  Colors.xlsx  Config Cleaners.xlsx  Countries.xlsx  Currency.xlsx  CurrencyOffers!.xlsx  CurrencyOffers.xlsx  Dialogs.xlsx  Edge Elements.xlsx  Enchantments.xlsx  Events.xlsx  Gear.xlsx  Guilds.xlsx  Hempstead.xlsx  Hero Stats.xlsx  Heroes.xlsx  Hints.xlsx  InboxMessages.xlsx  Menus!.xlsx  Menus.xlsx  Metagame.xlsx  Notifications.xlsx  Popups.xlsx  Projectiles.xlsx  PushNotifications.xlsx  Raids.xlsx  Rank.xlsx  Rarity.xlsx  RuntimePlatforms.xlsx  Sections.xlsx  Server.xlsx  Settings.xlsx  Simulations.xlsx  Skills.xlsx  (+11 more)
tests/Excel/Mutators/: __init__.py  achievement_mutators.py  asset_list_mutators.py  attack_mutators.py  campaign_mutators.py  chest_mutators.py  currency_mutators.py  effect_list_mutators.py  evolve_mutators.py  gift_message_mutators.py  hero_mutators.py  offer_mutators.py  request_mutators.py  simulation_mutators.py  skill_mutators.py  (+3 more)
tests/ExcelCases/: BadEnum.xlsx  BasicallyEmpty.xlsx
tests_mutators/: test_mutator.py
tests_validators/: test_validator.py
thriftify/: thriftify.py
xl2thrift/: __init__.py  command_line.py  mutate.py  mutate_cmd.py  thriftExcelTools.py
(+36 files in other folders)
