[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thriftify"
version = "0.0.1"
authors = [
  { name="Paul Wilkinson", email="paul@thisco.co" },
]
description = "Converts xlsx files into thrift-loadable binary or json blobs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
